kube-lego/ingress-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "true"
    name: ingress
spec:
    rules:
      - host: demos.azure-containers.io 
        http:
          paths:
            - backend:
                serviceName: nginx
                servicePort: 80
              path: /
    tls:
        - hosts:
            - demos.azure-containers.io
          secretName: example-tls
