kube-lego/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: ingress
spec:
    rules:
      - host: demos.azure-containers.io 
        http:
          paths:
            - backend:
                serviceName: nginx
                servicePort: 80
              path: /
    # This section is only required if TLS is to be enabled for the Ingress
#    tls:
#        - hosts:
 #           - www.example.com
 #         secretName: example-tls
